--- a/main.tex
+++ b/main.tex
@@ -1,13 +1,15 @@
 \documentclass{easychair}
 \usepackage[utf8]{inputenc}
 
-\title{smt2019}
-\author{matteo.marescotti }
-\institute{USI}
+\title{Learning Contract Invariants using IC3}
+\author{Matteo Marescotti\inst{1}\and Leonardo Alt\inst{2}\and Rodrigo Benedito Otoni\inst{1}}
+\institute{USI\and Ethereum Foundation}
 
 \begin{document}
 
 \maketitle
+
+\input{abstract}
 
 \input{introduction}
 \input{background}
