--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,20 @@
 \documentclass{easychair}
 \usepackage[utf8]{inputenc}
+\usepackage{listings}
 
 \title{Learning Contract Invariants using IC3}
 \author{Matteo Marescotti\inst{1}\and Leonardo Alt\inst{2}\and Rodrigo Benedito Otoni\inst{1}}
 \institute{USI\and Ethereum Foundation}
+
+\lstset{
+  numbers=left,
+  mathescape,
+  numberstyle=\tiny,
+  basicstyle=\ttfamily,
+  xleftmargin=.5in
+}
+
+\input{macros}
 
 \begin{document}
 
