--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 \usepackage{listings}
 
 \title{Learning Contract Invariants using IC3}
-\author{Matteo Marescotti\inst{1}\and Leonardo Alt\inst{2}\and Rodrigo Benedito Otoni\inst{1}}
+\author{Matteo Marescotti\inst{1}\and Leonardo Alt\inst{2}\and Rodrigo Otoni\inst{1}}
 \institute{USI\and Ethereum Foundation}
 
 \lstset{
