--- a/background.tex
+++ b/background.tex
@@ -1,8 +1,11 @@
 \section{Background}
 
+Here we present the background material of our work: the Solidity language, in Section \ref{sec:sol}, control-flow graphs, in Section \ref{sec:cfg}, and constrained Horn clauses, in Section \ref{sec:chc}.
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Solidity}
+\subsection{Solidity} \label{sec:sol}
 
 Solidity is a Turing-Complete language for the development of smart contracts. The two main elements of Solidity are contracts and functions, which we now describe; detailed information on Solidity can be found in \cite{}. 
 
@@ -24,7 +27,7 @@ The \texttt{average} function calculates and returns the average of deposits of 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Control-Flow Graph}
+\subsection{Control-Flow Graph} \label{sec:cfg}
 
 A control-flow graph is way to model a program such that all execution paths are explicitly present and can be analysed. There are two elements that constitute a control-flow graph: basic blocks and transitions.
 
@@ -34,6 +37,8 @@ A control-flow graph is way to model a program such that all execution paths are
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Horn Clauses}
+\subsection{Constrained Horn Clauses} \label{sec:chc}
 
-to do
+Horn Clauses are disjunctions of literals with at most one positive literal. They can be written in implication form and be used for program verification.
+
+to do (definition + example)
