authors and title running

--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,9 @@
 \author{Matteo Marescotti\inst{1}\and Leonardo Alt\inst{2}\and Rodrigo Otoni\inst{1}}
 \institute{USI\and Ethereum Foundation}
 
+\titlerunning{Learning Contract Invariants using IC3}
+\authorrunning{M. Marescotti, L. Alt, and R. B. Otoni}
+
 \lstset{
   numbers=left,
   mathescape,
