--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
 \institute{USI\and Ethereum Foundation}
 
 \titlerunning{Learning Contract Invariants using IC3}
-\authorrunning{M. Marescotti, L. Alt, and R. B. Otoni}
+\authorrunning{M. Marescotti, L. Alt, and R. Otoni}
 
 \lstset{
   numbers=left,
