figure captions update

--- a/solidity_cfg.tex
+++ b/solidity_cfg.tex
@@ -50,7 +50,7 @@ The control-flow graph of \texttt{average} function shown in Section \ref{sec:ba
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.7\textwidth]{images/average}
-	\caption{Graph of the average function}
+	\caption{Graph of the \texttt{average} function}
 	\label{fig:cfg_average}
 \end{figure}
 
@@ -74,6 +74,6 @@ The graph that models the contract \texttt{C}, shown in Section \ref{sec:backgro
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{images/contract-c}
-	\caption{Graph of a Solidity contract}
+	\caption{Graph of the \texttt{C} contract}
 	\label{fig:cfg_contract-c}
 \end{figure}
